# rlox

./: .gitignore  Cargo.toml  README.md
src/: error.rs  loxtype.rs  main.rs  native_fns.rs  parser.rs  scanner.rs  token.rs
src/ast/: expression.rs  mod.rs  statement.rs
src/interpreter/: env.rs  eval.rs  exec.rs  mod.rs
src/interpreter/snapshots/: rlox__interpreter__tests__interpreter@assignments__associativity.lox.snap  rlox__interpreter__tests__interpreter@assignments__global.lox.snap  rlox__interpreter__tests__interpreter@assignments__grouping.lox.snap  rlox__interpreter__tests__interpreter@assignments__infix_operator.lox.snap  rlox__interpreter__tests__interpreter@assignments__local.lox.snap  rlox__interpreter__tests__interpreter@assignments__prefix_operator.lox.snap  rlox__interpreter__tests__interpreter@assignments__syntax.lox.snap  rlox__interpreter__tests__interpreter@assignments__undefined.lox.snap  (+186 more)
src/resolver/: mod.rs  resolve_expr.rs  resolve_stmt.rs
src/snapshots/: rlox__parser__tests__parser.snap  rlox__parser__tests__parser@call__call.lox.snap  rlox__parser__tests__parser@expressions__parse.lox.snap  rlox__parser__tests__parser@function__fun.lox.snap  rlox__parser__tests__parser@function__return.lox.snap  rlox__scanner__tests__scanner@identifiers.lox.snap  rlox__scanner__tests__scanner@keywords.lox.snap  rlox__scanner__tests__scanner@numbers.lox.snap  rlox__scanner__tests__scanner@punctuators.lox.snap  rlox__scanner__tests__scanner@strings.lox.snap  rlox__scanner__tests__scanner@whitespace.lox.snap
