[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
itertools = "0.14.0"
phf = { version = "0.11.3", features = ["macros"] }
rustyline = "15.0.0"
serde = { version="1.0.217", features = ["derive"]}
strum = {version="0.27.1", features = ["derive"]}
thiserror = "2.0.11"

[dev-dependencies]
insta = { version = "1.42.1", features = ["glob", "yaml"] }
